--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
       <div class="container">
         <div class="d-flex justify-content-between align-items-center">
-          <div class="logo"><img src="logo.png" alt="logo" /></div>
+          <div class="logo"><img src="assets/logo.png" alt="logo" /></div>
           <nav class="nav">
             <ul class="nav-list">
               <li class="nav-item">
@@ -31,7 +31,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link nav-link--phone" href="tel:+79878878787">
-                  <img src="phone.png" alt="phone" /> +7 (987) 887-87
+                  <img src="assets/phone.png" alt="phone" /> +7 (987) 887-87
                 </a>
               </li>
             </ul>
@@ -43,7 +43,7 @@
     <!-- Banner -->
     <section class="banner container-fluid p-0">
       <img
-        src="banner-image.png"
+        src="assets/banner-image.png"
         class="img-fluid w-100"
         alt="Stormtrooper Banner"
       />
@@ -118,7 +118,7 @@
               <div class="col-lg-4 col-sm-12 card-mb">
                 <div class="card">
                   <img
-                    src="background-image.png"
+                    src="assets/background-image.png"
                     alt="Background"
                     class="card-img"
                   />
@@ -202,7 +202,7 @@
               <div class="col-lg-4">
                 <div class="card">
                   <img
-                    src="background-image.png"
+                    src="assets/background-image.png"
                     alt="Background"
                     class="card-img"
                   />
@@ -305,7 +305,7 @@
                   required
                 />
                 <button type="submit" class="subscribe-button">
-                  Подписаться <img src="send.png" />
+                  Подписаться <img src="assets/send.png" />
                 </button>
               </form>
             </div>
@@ -359,7 +359,7 @@
                   required
                 />
                 <button type="submit" class="subscribe-button">
-                  Подписаться <img src="send.png" />
+                  Подписаться <img src="assets/send.png" />
                 </button>
               </form>
             </div>
@@ -371,7 +371,7 @@
     <footer class="footer">
       <div class="footer-container">
         <div class="footer-logo">
-          <img src="logo.png" />
+          <img src="assets/logo.png" />
         </div>
         <div class="footer-links">
           <a href="#" class="footer-link">О нас</a>
